--- a/cbt.html
+++ b/cbt.html
@@ -1,209 +1,182 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CBT Practice</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CBT Admin Panel</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
       background: #000 url('https://cdn.jsdelivr.net/gh/Julian-Nash/assets@main/tech-background.gif') center/cover no-repeat;
       color: gold;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 700px;
-      margin: 80px auto;
-      background: rgba(20,20,20,0.95);
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px gold;
+      font-family: 'Segoe UI', sans-serif;
+      padding: 20px;
     }
     h2 {
       text-align: center;
       margin-bottom: 20px;
-      color: gold;
     }
-    select, button {
-      width: 100%;
-      padding: 12px;
+    form {
+      background: rgba(20, 20, 20, 0.9);
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 600px;
+      margin: auto;
+      box-shadow: 0 0 10px gold;
+    }
+    label {
+      display: block;
       margin-top: 10px;
-      font-size: 1rem;
+    }
+    input, select, textarea {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
       border: none;
-      border-radius: 8px;
+      border-radius: 6px;
+    }
+    button {
       background-color: gold;
       color: black;
       font-weight: bold;
-      cursor: pointer;
-    }
-    .question-box {
-      margin-top: 30px;
-    }
-    .question {
-      font-size: 1.2rem;
-      margin-bottom: 20px;
-    }
-    .options label {
-      display: block;
-      margin-bottom: 10px;
-      padding: 10px;
-      border: 1px solid gold;
+      padding: 10px 20px;
+      border: none;
       border-radius: 6px;
-      background: rgba(255, 215, 0, 0.1);
       cursor: pointer;
+      margin-top: 15px;
     }
-    .options input {
-      margin-right: 10px;
-    }
-    .nav-buttons {
-      display: flex;
-      justify-content: space-between;
+    .preview {
       margin-top: 20px;
-    }
-    .result {
-      text-align: center;
-      margin-top: 30px;
-      font-size: 1.2rem;
-    }
-    .hidden {
-      display: none;
+      padding: 10px;
+      background: rgba(30,30,30,0.85);
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>CBT Practice</h2>
+  <h2>CBT Admin Panel</h2>
+  <form id="cbtForm">
+    <label for="level">Level</label>
+    <select id="level" required>
+      <option value="">-- Select Level --</option>
+      <option value="100">100 Level</option>
+      <option value="200">200 Level</option>
+      <option value="300">300 Level</option>
+      <option value="400">400 Level</option>
+    </select><label for="type">Question Type</label>
+<select id="type" required onchange="toggleQuestionType()">
+  <option value="">-- Select Type --</option>
+  <option value="mcq">Multiple Choice (A-D)</option>
+  <option value="tf">True or False</option>
+</select>
 
-    <div id="setup">
-      <label for="level">Select Your Level:</label>
-      <select id="level">
-        <option value="">-- Choose Level --</option>
-        <option value="100">100 Level</option>
-        <option value="200">200 Level</option>
-        <option value="300">300 Level</option>
-        <option value="400">400 Level</option>
-      </select>
-      <button onclick="startCBT()">Start Practice</button>
-    </div>
+<label for="question">Question</label>
+<textarea id="question" rows="4" required></textarea>
 
-    <div id="quiz" class="hidden">
-      <div class="question-box">
-        <div id="qText" class="question"></div>
-        <div class="options" id="options"></div>
-      </div>
-      <div class="nav-buttons">
-        <button onclick="prevQuestion()">Previous</button>
-        <button onclick="nextQuestion()">Next</button>
-      </div>
-      <button onclick="submitQuiz()" style="margin-top: 20px;">Submit</button>
-    </div>
+<div id="mcqFields" style="display: none;">
+  <label>Option A</label>
+  <input type="text" id="optionA" />
+  <label>Option B</label>
+  <input type="text" id="optionB" />
+  <label>Option C</label>
+  <input type="text" id="optionC" />
+  <label>Option D</label>
+  <input type="text" id="optionD" />
+  <label>Correct Option</label>
+  <select id="correctOption">
+    <option value="A">A</option>
+    <option value="B">B</option>
+    <option value="C">C</option>
+    <option value="D">D</option>
+  </select>
+</div>
 
-    <div id="result" class="result hidden"></div>
-  </div>
+<div id="tfFields" style="display: none;">
+  <label>Correct Answer</label>
+  <select id="correctTF">
+    <option value="true">True</option>
+    <option value="false">False</option>
+  </select>
+</div>
 
-  <script>
-    const allQuestions = {
-      100: Array.from({ length: 30 }, (_, i) => ({
-        question: `100 Level Question ${i + 1}`,
-        options: {
-          a: "Option A",
-          b: "Option B",
-          c: "Option C",
-          d: "Option D"
-        },
-        answer: "a"
-      })),
-      200: Array.from({ length: 30 }, (_, i) => ({
-        question: `200 Level Question ${i + 1}`,
-        options: {
-          a: "Option A",
-          b: "Option B",
-          c: "Option C",
-          d: "Option D"
-        },
-        answer: "b"
-      })),
-      300: Array.from({ length: 30 }, (_, i) => ({
-        question: `300 Level Question ${i + 1}`,
-        options: {
-          a: "Option A",
-          b: "Option B",
-          c: "Option C",
-          d: "Option D"
-        },
-        answer: "c"
-      })),
-      400: Array.from({ length: 30 }, (_, i) => ({
-        question: `400 Level Question ${i + 1}`,
-        options: {
-          a: "Option A",
-          b: "Option B",
-          c: "Option C",
-          d: "Option D"
-        },
-        answer: "d"
-      })),
+<label>Attach Image (Optional)</label>
+<input type="file" id="image" accept="image/*" />
+
+<button type="submit">Save Question</button>
+
+  </form>  <div class="preview" id="preview"></div>  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import {
+      getFirestore,
+      collection,
+      addDoc,
+      serverTimestamp
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+    import {
+      getStorage,
+      ref,
+      uploadBytes,
+      getDownloadURL
+    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-storage.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+      authDomain: "finsa-connect.firebaseapp.com",
+      projectId: "finsa-connect",
+      storageBucket: "finsa-connect.appspot.com",
+      messagingSenderId: "126845965255",
+      appId: "1:126845965255:web:c82539297a8464873d7fe2"
     };
 
-    let currentQuestionIndex = 0;
-    let selectedLevel = '';
-    let selectedQuestions = [];
-    let userAnswers = [];
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const storage = getStorage(app);
 
-    function startCBT() {
+    window.toggleQuestionType = function () {
+      const type = document.getElementById("type").value;
+      document.getElementById("mcqFields").style.display = type === "mcq" ? "block" : "none";
+      document.getElementById("tfFields").style.display = type === "tf" ? "block" : "none";
+    }
+
+    document.getElementById("cbtForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+
       const level = document.getElementById("level").value;
-      if (!level) return alert("Please select a level");
+      const type = document.getElementById("type").value;
+      const question = document.getElementById("question").value;
+      const imageFile = document.getElementById("image").files[0];
+      let imageURL = "";
 
-      selectedLevel = level;
-      selectedQuestions = allQuestions[level];
-      userAnswers = Array(selectedQuestions.length).fill(null);
-      document.getElementById("setup").classList.add("hidden");
-      document.getElementById("quiz").classList.remove("hidden");
-      showQuestion();
-    }
-
-    function showQuestion() {
-      const q = selectedQuestions[currentQuestionIndex];
-      document.getElementById("qText").textContent = `${currentQuestionIndex + 1}. ${q.question}`;
-      const optionsHTML = Object.entries(q.options).map(([key, val]) => {
-        const checked = userAnswers[currentQuestionIndex] === key ? 'checked' : '';
-        return `<label><input type="radio" name="option" value="${key}" ${checked} onchange="saveAnswer(this.value)" /> ${val}</label>`;
-      }).join('');
-      document.getElementById("options").innerHTML = optionsHTML;
-    }
-
-    function saveAnswer(val) {
-      userAnswers[currentQuestionIndex] = val;
-    }
-
-    function nextQuestion() {
-      if (currentQuestionIndex < selectedQuestions.length - 1) {
-        currentQuestionIndex++;
-        showQuestion();
+      if (imageFile) {
+        const imageRef = ref(storage, `cbt_images/${Date.now()}_${imageFile.name}`);
+        const snapshot = await uploadBytes(imageRef, imageFile);
+        imageURL = await getDownloadURL(snapshot.ref);
       }
-    }
 
-    function prevQuestion() {
-      if (currentQuestionIndex > 0) {
-        currentQuestionIndex--;
-        showQuestion();
+      const data = {
+        level,
+        type,
+        question,
+        imageURL,
+        timestamp: serverTimestamp()
+      };
+
+      if (type === "mcq") {
+        data.options = {
+          A: document.getElementById("optionA").value,
+          B: document.getElementById("optionB").value,
+          C: document.getElementById("optionC").value,
+          D: document.getElementById("optionD").value
+        };
+        data.answer = document.getElementById("correctOption").value;
+      } else if (type === "tf") {
+        data.answer = document.getElementById("correctTF").value;
       }
-    }
 
-    function submitQuiz() {
-      let score = 0;
-      selectedQuestions.forEach((q, i) => {
-        if (userAnswers[i] === q.answer) score++;
-      });
-      document.getElementById("quiz").classList.add("hidden");
-      document.getElementById("result").classList.remove("hidden");
-      document.getElementById("result").innerHTML = `
-        You scored <strong>${score} out of ${selectedQuestions.length}</strong>.<br/>
-        ${score >= 15 ? '🎉 Great job!' : '📘 Keep practicing!'}
-      `;
-    }
-  </script>
-</body>
+      await addDoc(collection(db, "CBT_Questions"), data);
+      alert("Question saved successfully!");
+      document.getElementById("cbtForm").reset();
+      document.getElementById("mcqFields").style.display = "none";
+      document.getElementById("tfFields").style.display = "none";
+    });
+  </script></body>
 </html>
