--- a/cbt-practice.html
+++ b/cbt-practice.html
@@ -4,15 +4,47 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CBT Practice</title>
+  <script defer src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+  <script defer src="firebase-config.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #1b1b1b;
+      background-color: #0b0b0b;
       color: #fff;
-      padding: 20px;
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
     }
-    .question-card {
-      background-color: #2b2b2b;
+    header {
+      background: #111;
+      color: #ffcc00;
+      padding: 20px;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+    nav {
+      background: #1c1c1c;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      padding: 15px;
+    }
+    nav a {
+      color: #ffcc00;
+      text-decoration: none;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      padding: 20px;
+      max-width: 700px;
+      margin: auto;
+    }
+    .question-box {
+      background: #1e1e1e;
       padding: 20px;
       border-radius: 10px;
       margin-bottom: 30px;
@@ -24,45 +56,91 @@
       background-color: #ffcc00;
       border: none;
       padding: 10px 20px;
-      border-radius: 6px;
+      font-size: 1rem;
       font-weight: bold;
+      border-radius: 8px;
       cursor: pointer;
     }
     button:hover {
       background-color: #ffaa00;
     }
+    #result {
+      margin-top: 15px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
 
-  <h2>Practice CBT Questions</h2>
-  <div class="question-card">
-    <p><strong>Question 1:</strong> What is the full meaning of CBT?</p>
-    <div class="option"><input type="radio" name="q1" value="a" /> a) Computer Base Teaching</div>
-    <div class="option"><input type="radio" name="q1" value="b" /> b) Computer Based Test</div>
-    <div class="option"><input type="radio" name="q1" value="c" /> c) Common Base Technology</div>
-    <div class="option"><input type="radio" name="q1" value="d" /> d) Central Banking Training</div>
-    <br>
-    <button onclick="submitAnswer()">Submit</button>
-    <p id="result"></p>
-  </div>
+  <header>Finance Point – CBT Practice</header>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="dashboard.html">Dashboard</a>
+    <a href="cbt.html">CBT</a>
+    <a href="events.html">Events</a>
+  </nav>
+
+  <main>
+    <h2>Answer the following question:</h2>
+    <div id="question-container">
+      <div class="question-box" id="question-box">
+        <p><strong>Loading question...</strong></p>
+      </div>
+    </div>
+    <div id="result"></div>
+  </main>
 
   <script>
-    function submitAnswer() {
-      const selected = document.querySelector('input[name="q1"]:checked');
-      const result = document.getElementById('result');
+    const db = firebase.firestore();
+    let currentQuestion = null;
+
+    function renderQuestion(data) {
+      const container = document.getElementById("question-box");
+      container.innerHTML = `
+        <p><strong>${data.question}</strong></p>
+        ${data.options.map((opt, index) => `
+          <div class="option">
+            <input type="radio" name="answer" value="${opt}" id="opt${index}">
+            <label for="opt${index}">${opt}</label>
+          </div>
+        `).join('')}
+        <br>
+        <button onclick="checkAnswer()">Submit</button>
+      `;
+      currentQuestion = data;
+    }
+
+    function checkAnswer() {
+      const selected = document.querySelector('input[name="answer"]:checked');
+      const resultBox = document.getElementById("result");
       if (!selected) {
-        result.textContent = "Please select an answer.";
+        resultBox.innerHTML = "❗ Please choose an answer.";
+        resultBox.style.color = "orange";
         return;
       }
-      if (selected.value === "b") {
-        result.textContent = "✅ Correct!";
-        result.style.color = "lightgreen";
-      } else {
-        result.textContent = "❌ Wrong. The correct answer is 'Computer Based Test'.";
-        result.style.color = "red";
-      }
+      const isCorrect = selected.value === currentQuestion.answer;
+      resultBox.innerHTML = isCorrect ? "✅ Correct!" : `❌ Incorrect. Correct Answer: <b>${currentQuestion.answer}</b>`;
+      resultBox.style.color = isCorrect ? "lightgreen" : "red";
     }
+
+    async function loadQuestion() {
+      const snapshot = await db.collection("cbt_questions").limit(1).get();
+      if (snapshot.empty) {
+        document.getElementById("question-box").innerHTML = "<p>No questions found.</p>";
+        return;
+      }
+      const data = snapshot.docs[0].data();
+      renderQuestion(data);
+    }
+
+    firebase.auth().onAuthStateChanged((user) => {
+      if (user) {
+        loadQuestion();
+      } else {
+        document.getElementById("question-box").innerHTML = "<p>Please login to attempt the CBT.</p>";
+      }
+    });
   </script>
 
 </body>
